--- a/static/index.html
+++ b/static/index.html
@@ -34,17 +34,18 @@
 
     <div class="form-box" id="login-box">
         <div class="header">Sign IN</div>
-        <form action="/" method="post">
+        <form action="/login" method="post">
 
             <!-- style="margin-top:40px;" -->
 
             <div class="body white-bg">
                 <div class="form-group">
                     <input id="username" class="form-control" placeholder="Username" name="username" type="text"
-                        autofocus="" value="">
+                        autofocus="" value="" required='true'>
                 </div>
                 <div class="form-group">
-                    <input id="password" class="form-control" placeholder="Password" name="password" type="password">
+                    <input id="password" required='true' class="form-control" placeholder="Password" name="password"
+                        type="password">
                 </div>
 
 
